RESOLVED FIXED111862
./Source/WebKit2/WebProcess/Plugins/Plugin.h:268:58: error: 'FloatPoint' in namespace 'WebCore' does not name a type
https://bugs.webkit.org/show_bug.cgi?id=111862
Summary ./Source/WebKit2/WebProcess/Plugins/Plugin.h:268:58: error: 'FloatPoint' in n...
Tobias Mueller
Reported 2013-03-08 08:47:40 PST
I can't build WebKitGTK+: libtool: compile: g++ -DHAVE_CONFIG_H -I. -fno-strict-aliasing -Wall -W -Wcast-align -Wchar-subscripts -Wreturn-type -Wformat -Wformat-security -Wno-format-y2k -Wundef -Wmissing-format-attribute -Wpointer-arith -Wwrite-strings -Wno-unused-parameter -Wno-parentheses -fno-exceptions -DBUILDING_CAIRO__ -DBUILDING_GTK__ -DBUILDING_WEBKIT2__ -include ./Source/WebKit2/WebKit2Prefix.h -I./Source/WebKit/gtk -I./Source/WebKit2 -I./Source/WebKit2/gtk -I./Source/WebKit2/Platform -I./Source/WebKit2/Platform/CoreIPC -I./Source/WebKit2/Platform/CoreIPC/gtk -I./Source/WebKit2/Platform/gtk -I./Source/WebKit2/PluginProcess -I./Source/WebKit2/Shared -I./Source/WebKit2/Shared/API -I./Source/WebKit2/Shared/API/c -I./Source/WebKit2/Shared/API/c/gtk -I./Source/WebKit2/Shared/API/c/soup -I./Source/WebKit2/Shared/Authentication -I./Source/WebKit2/Shared/CoreIPCSupport -I./Source/WebKit2/Shared/Downloads -I./Source/WebKit2/Shared/Downloads/soup -I./Source/WebKit2/Shared/gtk -I./Source/WebKit2/Shared/Network -I./Source/WebKit2/Shared/Plugins -I./Source/WebKit2/Shared/Plugins/Netscape -I./Source/WebKit2/Shared/Plugins/Netscape/x11 -I./Source/WebKit2/Shared/soup -I./Source/WebKit2/UIProcess -I./Source/WebKit2/UIProcess/API -I./Source/WebKit2/UIProcess/API/C -I./Source/WebKit2/UIProcess/API/C/gtk -I./Source/WebKit2/UIProcess/API/C/soup -I./Source/WebKit2/UIProcess/API/cpp -I./Source/WebKit2/UIProcess/API/gtk -I./Source/WebKit2/UIProcess/Authentication -I./Source/WebKit2/UIProcess/Downloads -I./Source/WebKit2/UIProcess/gtk -I./Source/WebKit2/UIProcess/Launcher -I./Source/WebKit2/UIProcess/Launcher/gtk -I./Source/WebKit2/UIProcess/Notifications -I./Source/WebKit2/UIProcess/Plugins -I./Source/WebKit2/UIProcess/Plugins/unix -I./Source/WebKit2/UIProcess/Storage -I./Source/WebKit2/UIProcess/soup -I./Source/WebKit2/UIProcess/InspectorServer -I./Source/WebKit2/WebProcess -I./Source/WebKit2/WebProcess/ApplicationCache -I./Source/WebKit2/WebProcess/Battery -I./Source/WebKit2/WebProcess/Cookies -I./Source/WebKit2/WebProcess/FullScreen -I./Source/WebKit2/WebProcess/Geolocation -I./Source/WebKit2/WebProcess/gtk -I./Source/WebKit2/WebProcess/IconDatabase -I./Source/WebKit2/WebProcess/InjectedBundle -I./Source/WebKit2/WebProcess/InjectedBundle/API -I./Source/WebKit2/WebProcess/InjectedBundle/API/c -I./Source/WebKit2/WebProcess/InjectedBundle/API/gtk -I./Source/WebKit2/WebProcess/InjectedBundle/DOM -I./Source/WebKit2/WebProcess/InjectedBundle/gtk -I./Source/WebKit2/WebProcess/KeyValueStorage -I./Source/WebKit2/WebProcess/Launching -I./Source/WebKit2/WebProcess/MediaCache -I./Source/WebKit2/WebProcess/NetworkInfo -I./Source/WebKit2/WebProcess/Notifications -I./Source/WebKit2/WebProcess/ResourceCache -I./Source/WebKit2/WebProcess/Storage -I./Source/WebKit2/WebProcess/soup -I./Source/WebKit2/WebProcess/Plugins -I./Source/WebKit2/WebProcess/Plugins/Netscape -I./Source/WebKit2/WebProcess/Plugins/Netscape/unix -I./Source/WebKit2/WebProcess/WebCoreSupport -I./Source/WebKit2/WebProcess/WebCoreSupport/gtk -I./Source/WebKit2/WebProcess/WebCoreSupport/soup -I./Source/WebKit2/WebProcess/WebPage -I./Source/WebKit2/WebProcess/WebPage/atk -I./Source/WebKit2/WebProcess/WebPage/gtk -I./DerivedSources/WebKit2 -I./DerivedSources/WebKit2/include -I./DerivedSources/WebKit2/webkit2gtk -I./DerivedSources/WebKit2/webkit2gtk/include -I./DerivedSources/WebKit2/webkit2gtk/webkit2 -I./DerivedSources/WebKit2/webkit2extension/include -I./DerivedSources/WebKit2/include/JavaScriptCore -I./DerivedSources/WebKit2/include/WebCore -I./DerivedSources/WebKit2/include/WebKit2 -I./DerivedSources/webkitdom -DLIBEXECDIR=\"/opt/gnome2/libexec\" -DLIBDIR=\"/opt/gnome2/lib64\" -DBUILDING_WEBKIT -DWEBKIT2_COMPILATION -DENABLE_PLUGIN_PROCESS=1 -I./Source/ThirdParty/ANGLE/src -I./Source/ThirdParty/ANGLE/include -I./Source/ThirdParty/ANGLE/include/GLSLANG -I./Source/ThirdParty/ANGLE/include/KHR -I./Source/WebCore -I./Source/WebCore/Modules/filesystem -I./Source/WebCore/Modules/gamepad -I./Source/WebCore/Modules/geolocation -I./Source/WebCore/Modules/indexeddb -I./Source/WebCore/Modules/mediasource -I./Source/WebCore/Modules/mediastream -I./Source/WebCore/Modules/navigatorcontentutils -I./Source/WebCore/Modules/notifications -I./Source/WebCore/Modules/proximity -I./Source/WebCore/Modules/quota -I./Source/WebCore/Modules/webaudio -I./Source/WebCore/Modules/webdatabase -I./Source/WebCore/Modules/websockets -I./Source/WebCore/accessibility -I./Source/WebCore/bindings -I./Source/WebCore/bindings/generic -I./Source/WebCore/bindings/js -I./Source/WebCore/bridge -I./Source/WebCore/bridge/c -I./Source/WebCore/bridge/jsc -I./Source/WebCore/css -I./Source/WebCore/dom -I./Source/WebCore/dom/default -I./Source/WebCore/editing -I./Source/WebCore/fileapi -I./Source/WebCore/history -I./Source/WebCore/html -I./Source/WebCore/html/canvas -I./Source/WebCore/html/parser -I./Source/WebCore/html/shadow -I./Source/WebCore/html/track -I./Source/WebCore/inspector -I./Source/WebCore/loader -I./Source/WebCore/loader/appcache -I./Source/WebCore/loader/archive -I./Source/WebCore/loader/archive/mhtml -I./Source/WebCore/loader/cache -I./Source/WebCore/loader/icon -I./Source/WebCore/mathml -I./Source/WebCore/page -I./Source/WebCore/page/animation -I./Source/WebCore/page/scrolling -I./Source/WebCore/platform -I./Source/WebCore/platform/animation -I./Source/WebCore/platform/audio -I./Source/WebCore/platform/graphics -I./Source/WebCore/platform/graphics/cpu/arm -I./Source/WebCore/platform/graphics/cpu/arm/filters/ -I./Source/WebCore/platform/graphics/filters -I./Source/WebCore/platform/graphics/filters/texmap -I./Source/WebCore/platform/graphics/freetype -I./Source/WebCore/platform/graphics/gpu -I./Source/WebCore/platform/graphics/harfbuzz -I./Source/WebCore/platform/graphics/harfbuzz/ng -I./Source/WebCore/platform/graphics/opengl -I./Source/WebCore/platform/graphics/opentype -I./Source/WebCore/platform/graphics/transforms -I./Source/WebCore/platform/image-decoders -I./Source/WebCore/platform/image-decoders/bmp -I./Source/WebCore/platform/image-decoders/gif -I./Source/WebCore/platform/image-decoders/ico -I./Source/WebCore/platform/image-decoders/jpeg -I./Source/WebCore/platform/image-decoders/png -I./Source/WebCore/platform/image-decoders/webp -I./Source/WebCore/platform/leveldb -I./Source/WebCore/platform/linux -I./Source/WebCore/platform/mediastream -I./Source/WebCore/platform/mediastream/gstreamer -I./Source/WebCore/platform/mock -I./Source/WebCore/platform/network -I./Source/WebCore/platform/network/gtk -I./Source/WebCore/platform/sql -I./Source/WebCore/platform/text -I./Source/WebCore/platform/text/transcoder -I./Source/WebCore/platform/win -I./Source/WebCore/plugins -I./Source/WebCore/plugins/win -I./Source/WebCore/rendering -I./Source/WebCore/rendering/mathml -I./Source/WebCore/rendering/style -I./Source/WebCore/rendering/svg -I./Source/WebCore/storage -I./Source/WebCore/svg -I./Source/WebCore/svg/animation -I./Source/WebCore/svg/graphics -I./Source/WebCore/svg/graphics/filters -I./Source/WebCore/svg/properties -I./Source/WebCore/testing -I./Source/WebCore/testing/js -I./Source/WebCore/websockets -I./Source/WebCore/workers -I./Source/WebCore/xml -I./Source/WebCore/xml/parser -I./WebCore/bindings/js -I./DerivedSources/WebCore -I./DerivedSources -I./DerivedSources/JavaScriptCore -DDATA_DIR=\"/opt/gnome2/share\" -DWTF_USE_LEVELDB=1 -I./Source/ThirdParty/leveldb -I./Source/ThirdParty/leveldb/include -DENABLE_3D_RENDERING=0 -DENABLE_ACCELERATED_2D_CANVAS=0 -DENABLE_BATTERY_STATUS=0 -DENABLE_BLOB=1 -DENABLE_CANVAS_PATH=1 -DENABLE_CANVAS_PROXY=0 -DENABLE_CHANNEL_MESSAGING=1 -DENABLE_CSP_NEXT=1 -DENABLE_CSS3_TEXT=1 -DENABLE_CSS_BOX_DECORATION_BREAK=1 -DENABLE_CSS_COMPOSITING=0 -DENABLE_CSS_DEVICE_ADAPTATION=0 -DENABLE_CSS_EXCLUSIONS=1 -DENABLE_CSS_FILTERS=0 -DENABLE_CSS_IMAGE_ORIENTATION=1 -DENABLE_CSS_IMAGE_RESOLUTION=1 -DENABLE_CSS_IMAGE_SET=1 -DENABLE_CSS_REGIONS=1 -DENABLE_CSS_SHADERS=0 -DENABLE_CSS_STICKY_POSITION=1 -DENABLE_CSS_TRANSFORMS_ANIMATIONS_UNPREFIXED=1 -DENABLE_CSS_VARIABLES=1 -DENABLE_CSS3_CONDITIONAL_RULES=0 -DENABLE_CUSTOM_SCHEME_HANDLER=0 -DENABLE_DASHBOARD_SUPPORT=0 -DENABLE_DATALIST_ELEMENT=0 -DENABLE_DATA_TRANSFER_ITEMS=0 -DENABLE_DETAILS_ELEMENT=1 -DENABLE_DEVICE_ORIENTATION=0 -DENABLE_DIALOG_ELEMENT=0 -DENABLE_DIRECTORY_UPLOAD=0 -DENABLE_DOM4_EVENTS_CONSTRUCTOR=1 -DENABLE_DOWNLOAD_ATTRIBUTE=0 -DENABLE_FILE_SYSTEM=0 -DENABLE_FILTERS=1 -DENABLE_FTPDIR=1 -DENABLE_FULLSCREEN_API=1 -DENABLE_GAMEPAD=0 -DENABLE_GEOLOCATION=0 -DENABLE_HIGH_DPI_CANVAS=0 -DENABLE_ICONDATABASE=1 -DENABLE_IFRAME_SEAMLESS=1 -DENABLE_INDEXED_DATABASE=1 -DENABLE_INPUT_SPEECH=0 -DENABLE_INPUT_TYPE_COLOR=0 -DENABLE_INPUT_TYPE_DATE=0 -DENABLE_INPUT_TYPE_DATETIME=0 -DENABLE_INPUT_TYPE_DATETIMELOCAL=0 -DENABLE_INPUT_TYPE_MONTH=0 -DENABLE_INPUT_TYPE_TIME=0 -DENABLE_INPUT_TYPE_WEEK=0 -DENABLE_INSPECTOR=1 -DENABLE_JAVASCRIPT_DEBUGGER=1 -DENABLE_LEGACY_CSS_VENDOR_PREFIXES=0 -DENABLE_LEGACY_NOTIFICATIONS=0 -DENABLE_LEGACY_VENDOR_PREFIXES=1 -DENABLE_LEGACY_WEB_AUDIO=1 -DENABLE_LINK_PREFETCH=1 -DENABLE_LINK_PRERENDER=0 -DENABLE_MATHML=1 -DENABLE_MEDIA_CAPTURE=0 -DENABLE_MEDIA_SOURCE=0 -DENABLE_MEDIA_STATISTICS=0 -DENABLE_MEDIA_STREAM=0 -DENABLE_METER_ELEMENT=1 -DENABLE_MHTML=1 -DENABLE_MICRODATA=1 -DENABLE_MOUSE_CURSOR_SCALE=0 -DENABLE_NAVIGATOR_CONTENT_UTILS=0 -DENABLE_NETSCAPE_PLUGIN_API=1 -DENABLE_NETWORK_INFO=0 -DENABLE_NOTIFICATIONS=0 -DENABLE_ORIENTATION_EVENTS=0 -DENABLE_PAGE_VISIBILITY_API=0 -DENABLE_PERFORMANCE_TIMELINE=1 -DENABLE_PROGRESS_ELEMENT=1 -DENABLE_PROXIMITY_EVENTS=0 -DENABLE_QUOTA=0 -DENABLE_RESOURCE_TIMING=1 -DENABLE_REQUEST_ANIMATION_FRAME=1 -DENABLE_SCRIPTED_SPEECH=0 -DENABLE_SHADOW_DOM=1 -DENABLE_SHARED_WORKERS=1 -DENABLE_SMOOTH_SCROLLING=1 -DENABLE_SPELLCHECK=0 -DENABLE_SQL_DATABASE=1 -DENABLE_STYLE_SCOPED=1 -DENABLE_SVG=0 -DENABLE_SVG_DOM_OBJC_BINDINGS=0 -DENABLE_SVG_FONTS=0 -DENABLE_TEMPLATE_ELEMENT=1 -DENABLE_TEXT_AUTOSIZING=0 -DENABLE_TOUCH_EVENTS=0 -DENABLE_TOUCH_ICON_LOADING=0 -DENABLE_USER_TIMING=1 -DENABLE_VIBRATION=0 -DENABLE_VIDEO=0 -DENABLE_VIDEO_TRACK=0 -DENABLE_WEBGL=0 -DENABLE_WEB_AUDIO=0 -DENABLE_WEB_SOCKETS=1 -DENABLE_WEB_TIMING=1 -DENABLE_WORKERS=1 -DENABLE_XHR_TIMEOUT=1 -DENABLE_XSLT=0 -DWEBKITGTK_API_VERSION_STRING=\"3.0\" -I./Source/WebCore/accessibility/atk -I./Source/WebCore/loader/gtk -I./Source/WebCore/page/gtk -I./Source/WebCore/platform/cairo -I./Source/WebCore/platform/audio/gstreamer -I./Source/WebCore/platform/geoclue -I./Source/WebCore/platform/graphics/cairo -I./Source/WebCore/platform/graphics/freetype -I./Source/WebCore/platform/graphics/glx -I./Source/WebCore/platform/graphics/harfbuzz -I./Source/WebCore/platform/graphics/harfbuzz/ng -I./Source/WebCore/platform/graphics/egl -I./Source/WebCore/platform/graphics/gstreamer -I./Source/WebCore/platform/graphics/gtk -I./Source/WebCore/platform/gtk -I./Source/WebCore/platform/network/soup -I./Source/WebCore/platform/text/enchant -I./Source -I./Source/JavaScriptCore -I./Source/JavaScriptCore/API -I./Source/JavaScriptCore/assembler -I./Source/JavaScriptCore/bytecode -I./Source/JavaScriptCore/bytecompiler -I./Source/JavaScriptCore/dfg -I./Source/JavaScriptCore/disassembler -I./Source/JavaScriptCore/heap -I./Source/JavaScriptCore/debugger -I./Source/JavaScriptCore/ForwardingHeaders -I./Source/JavaScriptCore/interpreter -I./Source/JavaScriptCore/jit -I./Source/JavaScriptCore/jit -I./Source/JavaScriptCore/llint -I./Source/JavaScriptCore/parser -I./Source/JavaScriptCore/profiler -I./Source/JavaScriptCore/runtime -I./Source/JavaScriptCore/tools -I./Source/JavaScriptCore/yarr -I./DerivedSources/JavaScriptCore -I./Source/WTF -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -I/opt/gnome2/include/harfbuzz -I/usr/include/cairo -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng15 -pthread -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -pthread -I/opt/gnome2/include/gtk-3.0 -I/opt/gnome2/include/atk-1.0 -I/opt/gnome2/include/at-spi2-atk/2.0 -I/opt/gnome2/include/pango-1.0 -I/opt/gnome2/include/gio-unix-2.0/ -I/opt/gnome2/include/gdk-pixbuf-2.0 -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -I/opt/gnome2/include/harfbuzz -I/usr/include/cairo -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng15 -pthread -I/opt/gnome2/include/gtk-3.0/unix-print -I/opt/gnome2/include/gtk-3.0 -I/opt/gnome2/include/atk-1.0 -I/opt/gnome2/include/gdk-pixbuf-2.0 -I/opt/gnome2/include/at-spi2-atk/2.0 -I/opt/gnome2/include/pango-1.0 -I/opt/gnome2/include/gio-unix-2.0/ -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -I/opt/gnome2/include/harfbuzz -I/usr/include/cairo -I/usr/include/freetype2 -I/usr/include/pixman-1 -I/usr/include/libpng15 -pthread -I/opt/gnome2/include/libsoup-2.4 -I/opt/gnome2/include/libxml2 -I/opt/gnome2/include/glib-2.0 -I/opt/gnome2/lib64/glib-2.0/include -D_REENTRANT -I/usr/include -fno-rtti -g3 -pipe -O2 -Wno-c++0x-compat -O2 -MT Source/WebKit2/PluginProcess/libwebkit2gtk_3_0_la-PluginControllerProxy.lo -MD -MP -MF Source/WebKit2/PluginProcess/.deps/libwebkit2gtk_3_0_la-PluginControllerProxy.Tpo -c Source/WebKit2/PluginProcess/PluginControllerProxy.cpp -fPIC -DPIC -o Source/WebKit2/PluginProcess/.libs/libwebkit2gtk_3_0_la-PluginControllerProxy.o In file included from Source/WebKit2/PluginProcess/PluginControllerProxy.h:32:0, from Source/WebKit2/PluginProcess/PluginControllerProxy.cpp:27: ./Source/WebKit2/WebProcess/Plugins/Plugin.h:268:58: error: 'FloatPoint' in namespace 'WebCore' does not name a type ./Source/WebKit2/WebProcess/Plugins/Plugin.h:268:77: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive] make[1]: *** [Source/WebKit2/PluginProcess/libwebkit2gtk_3_0_la-PluginControllerProxy.lo] Error 1 make[1]: Leaving directory `/home/muelli/svn/gnome2/webkitgtk-1.11.91' make: *** [all] Error 2 [jhbuild] muelli@bigbox ~/svn/gnome2/webkitgtk-1.11.91 $ head config.log This file contains any messages produced by compilers while running configure, to aid debugging if configure makes a mistake. It was created by WebKitGTK configure 1.11.91, which was generated by GNU Autoconf 2.69. Invocation command line was $ ./configure --prefix /opt/gnome2 --libdir /opt/gnome2/lib64 --enable-introspection --disable-silent-rules --with-gstreamer=1.0 --disable-static --disable-scrollkeeper --disable-gtk-doc --disable-docs --enable-gtk-doc=no --enable-gtk-doc-html=no --enable-gtk-doc-pdf=no --disable-webkit1 --disable-spellcheck --disable-glx --disable-egl --disable-gles2 --disable-gamepad --disable-video --disable-mediastream --disable-xslt --disable-geolocation --disable-svg --disable-svg-fonts --disable-web-audio --disable-coverage --disable-webgl --disable-gtk-doc-html --disable-accelerated-compositing ## --------- ## ## Platform. ## [jhbuild] muelli@bigbox ~/svn/gnome2/webkitgtk-1.11.91 $
Attachments
Adding FloatPoint to the namespace (1.59 KB, patch)
2013-03-08 14:54 PST, Tobias Mueller
no flags
Patch adding FloatPoint to the namespace (1.79 KB, patch)
2013-03-14 17:38 PDT, Tobias Mueller
no flags
Tobias Mueller
Comment 1 2013-03-08 14:54:31 PST
Created attachment 192290 [details] Adding FloatPoint to the namespace With that patch, it builds. I know way too little about the semantics of C++ so I can't really tell whether this is indeed a correct fix. Also, I was just redirected here by https://live.gnome.org/WebKitGtk which does not include much information on what the procedure is to submit patches. So feel free to slash me.
Tobias Mueller
Comment 2 2013-03-14 17:38:29 PDT
Created attachment 193210 [details] Patch adding FloatPoint to the namespace
WebKit Commit Bot
Comment 3 2013-04-10 12:17:17 PDT
Comment on attachment 193210 [details] Patch adding FloatPoint to the namespace Clearing flags on attachment: 193210 Committed r148125: <http://trac.webkit.org/changeset/148125>
WebKit Commit Bot
Comment 4 2013-04-10 12:17:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.